--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.35.6",
+    "@supabase/ui": "^0.36.5",
     "@types/react-grid-layout": "^1.3.2",
     "axios": "^0.27.2",
     "flowbite": "^1.5.2",
@@ -20,6 +21,7 @@
     "next-pwa": "^5.5.5",
     "next-themes": "^0.2.0",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-hot-toast": "^2.3.0",
