--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "invidia",
+  "name": "hamoye-react",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,35 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^1.35.6",
-    "@supabase/ui": "^0.36.5",
-    "@types/react-grid-layout": "^1.3.2",
-    "axios": "^0.27.2",
-    "flowbite": "^1.5.2",
-    "flowbite-react": "^0.1.6",
-    "formik": "^2.2.9",
-    "lodash": "^4.17.21",
-    "next": "12.2.3",
-    "next-pwa": "^5.5.5",
-    "next-themes": "^0.2.0",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.3",
+    "@mui/x-data-grid": "^6.3.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@supabase/auth-helpers-nextjs": "^0.6.1",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-ui-react": "^0.3.5",
+    "@supabase/supabase-js": "^2.21.0",
+    "axios": "^1.4.0",
+    "next": "13.3.4",
     "react": "18.2.0",
-    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "18.2.0",
-    "react-grid-layout": "^1.3.4",
-    "react-hot-toast": "^2.3.0",
-    "react-icons": "^4.4.0",
-    "swr": "^1.3.0"
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^8.0.5",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
-    "@types/node": "18.6.1",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "tailwindcss-safe-area": "^0.2.2",
-    "typescript": "4.7.4"
+    "@types/node": "18.16.3",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.1",
+    "eslint": "8.39.0",
+    "eslint-config-next": "13.3.4",
+    "typescript": "5.0.4"
   }
 }
